# project_trello

./: cards.json  pyproject.toml  trello_project.json
project_trello/: .gitignore  feb9_testing.py  greeting.py  main.py
tests/: test_feb9_testing.py  test_greeting.py  test_main.py  test_project_trello.py
