[tool.poetry]
name = "project_trello"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jedi = "<0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.19.0"
pylint = "^2.6.0"

[tool.poetry.scripts]
trello = "project_trello.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
